Add template for Hue lightstrip and added as an example to custom.config.yaml

--- a/nolu/custom_example/custom.config.yaml
+++ b/nolu/custom_example/custom.config.yaml
@@ -81,6 +81,8 @@ home:
             # OR
             - 'icon_hue_iris'
             # OR
+            - 'icon_hue_lightstrip'
+            # OR
             - 'icon_hue_bulb_candle'
             # OR
             - 'icon_hue_floor_shade'
