--- a/nolu/core/includes/views/core_view.llg.yaml
+++ b/nolu/core/includes/views/core_view.llg.yaml
@@ -45,35 +45,32 @@
             #################################################
             {% if ((data.show_header is defined) and (data.show_header == true)) or
               (data.show_header is not defined) %}
-              
-              #################################################
-              #
-              # NO GREETING
-              # this should be a `normal` include
-              #
-              #################################################
-              {% if data.greeting is not defined %}
             - !include includes/main_header/main_header.llg.yaml
-              {% endif %}
-              
-              #################################################
-              #
-              # WITH GREETING
-              # this is a lovelace_gen include where we need
-              # pass the greeting variables 
-              #
-              #################################################
-              {% if data.greeting is defined %}
-            - !include 
-              - includes/main_header/main_header.llg.yaml
-              - greeting: 
-                  {% if data.greeting.title is defined %}
-                  title: {{ data.greeting.title }}
-                  {% endif %}
+            {% endif %}
 
-                  {% if data.greeting.subtitle is defined %}
-                  subtitle: {{ data.greeting.subtitle }}
-                  {% endif %}
+            #################################################
+            #         GREETING
+            #################################################
+            {% if (data.greeting is defined) %}
+            - !include
+              - includes/greeting/greeting.llg.yaml
+                # Both `greeting`-variables are defined
+              {% if (data.greeting.title is defined) and
+                (data.greeting.subtitle is defined) %}
+              - greeting_title: {{ data.greeting.title }}
+                greeting_subtitle: {{ data.greeting.subtitle }}
+
+                # One of the `greeting`-variables are defined
+              {% else %}
+                # `greeting.title` is defined
+                {% if (data.greeting.title is defined) %}
+              - greeting_title: {{ data.greeting.title }}
+                {% endif %}
+
+                # `greeting.subtitle` is defined
+                {% if (data.greeting.subtitle is defined) %}
+              - greeting_subtitle: {{ data.greeting.subtitle }}
+                {% endif %}
               {% endif %}
             {% endif %}
 
