--- a/nolu/custom_example/custom.config.yaml
+++ b/nolu/custom_example/custom.config.yaml
@@ -20,7 +20,11 @@ home:
   # `greeting`
   # Shows a custom greeting text
   greeting:
-    title: 'Hello {{ user }}👋,'
+    # !IMPORTANT! For some strange reason when starting with a `states(....)`
+    # method this will throw an error. When a character is placed in front of
+    # it the error doesn't occur. So thats why I placed it in a <span>-tag
+    title: |
+      <span>{{ states('sensor.greeting') }}</span> {{ user }},
     # `sunny` can be replaced by templating language e.g. {{ states('weather.xxxx') }}
     subtitle: 'It will be a sunny day...'
 
