--- a/nolu/core/includes/config/lovelace-resources.config.yaml
+++ b/nolu/core/includes/config/lovelace-resources.config.yaml
@@ -21,6 +21,8 @@
   type: module
 - url: /hacsfiles/simple-weather-card/simple-weather-card-bundle.js
   type: module
+- url: /hacsfiles/slider-button-card/slider-button-card.js
+  type: module
 - url: /hacsfiles/thermostat-popup-card/thermostat-popup-card.js
   type: module
 ####################################################################
